# cos-tools

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  cloudbuild.yaml  deps.bzl  go.mod  go.sum  postsubmit-cloudbuild.yaml  run_tests.sh  run_unit_tests.sh
cmd/cos_image_analyzer/: main.go
cmd/cos_image_analyzer/internal/testData/: os-release-77  os-release-81
cmd/cos_image_analyzer/internal/utilities/: mapHelpers.go  mapHelpers_test.go
coverage/: build-metadata.sh  cloudbuild.yaml
release/: BUILD  README.md  cloudbuild.yaml  release-versions.yaml  release.py
src/: go.mod  go.sum
src/cmd/changelog/: README.md  main.go  main_test.py
src/cmd/changelog-cli/: README.md  main.go  main_test.go
src/cmd/changelog-webapp/: .gcloudignore  README.md  app.yaml  main.go
src/cmd/changelog-webapp/controllers/: authHandlers.go  pageHandlers.go
src/cmd/changelogctl/: README.md  main.go  main_test.go
src/cmd/cos_customizer/: BUILD.bazel  DESIGN.md  Dockerfile  README.md  cloudbuild.yaml  disable_auto_update.go  finish_image_build.go  finish_image_build_test.go  install_gpu.go  install_gpu_test.go  install_packages.go  main.go  run_script.go  run_script_test.go  seal_oem.go  start_image_build.go  start_image_build_test.go
src/cmd/cos_gpu_config_builder/: Dockerfile  cloudbuild.yaml  main.go
src/cmd/cos_gpu_driver_builder/: Dockerfile  cloudbuild.yaml  main.go
src/cmd/cos_gpu_driver_builder/builder/: builder.go
src/cmd/cos_gpu_installer/: Dockerfile  README.md  cloudbuild.yaml  main.go
src/cmd/cos_gpu_installer/release/: Dockerfile  build_and_release.sh  cloud_build_request.yaml
src/cmd/cos_gpu_installer/test/: check_drivers_test.go  run_test.sh
src/cmd/cos_gpu_installer/versions/: versions.pb.go  versions.proto
src/cmd/cos_gpu_installer_v1/: cloudbuild.yaml
src/cmd/cos_gpu_installer_v1/cos-gpu-installer-docker/: Dockerfile  entrypoint.sh
src/cmd/cos_image_analyzer/: README.md  main.go
src/cmd/cos_kdump_debugger/: Dockerfile  README.md  cloudbuild.yaml  kdump_debugger.sh
src/cmd/cos_kernel_devenv/: Dockerfile  README.md  cloudbuild.yaml  devenv.sh
src/cmd/cos_ova_converter/: Dockerfile  Makefile  README.md  cloudbuild.yaml  main.go  ova_from_gce.go  ova_to_gce.go  requirements.txt
src/cmd/cos_xfstests_runner/: Dockerfile  README.md  cloudbuild.yaml  run_config.sh
src/cmd/handle_disk_layout/: BUILD.bazel  handle_disk_layout_bin.go
src/cmd/kselftest_builder/: Dockerfile  cloudbuild.yaml
src/cmd/metadata_watcher/: BUILD.bazel
src/cmd/nodeprofiler/: Dockerfile  Makefile  README.md  main.go  profiler-ds.yml  sample_config.json
src/cmd/provisioner/: BUILD.bazel  README.md  embeds_linux_amd64.go  embeds_linux_arm64.go  main.go  resume.go  run.go
src/cmd/sign_file/: main.go
src/cmd/toolbox/: Dockerfile  cloudbuild.yaml  cos-kernel
src/data/: build_image.wf.json  startup.yaml
src/pkg/changelog/: changelog.go  changelog_test.go  gitcommit.go  gitcommit_test.go
src/pkg/config/: BUILD.bazel  config.go
src/pkg/cos/: artifacts.go  cos.go  cos_test.go  env_reader.go  env_reader_test.go  extensions.go  pkg_info.go  pkg_info_test.go
src/pkg/cos/testdata/: only_build_time_packages.json  only_installed_packages.json  packages.json
src/pkg/fakes/: BUILD.bazel  gce.go  gce_test.go  gcs.go  gcs_test.go
src/pkg/findbuild/: findbuild.go  findbuild_test.go
src/pkg/fs/: BUILD.bazel  archiver.go  build_context.go  file_system.go  gzip.go
src/pkg/gce/: BUILD.bazel  delete_old_vm.go  delete_old_vm_test.go  gce.go  gce_test.go
src/pkg/gcs/: BUILD.bazel  gcs_client.go
src/pkg/gpuconfig/: artifacts.go  config.go  generate_configs.go  generate_configs_test.go  read_configs.go  read_configs_test.go  upload_configs.go  upload_configs_test.go
src/pkg/gpuconfig/pb/: config.pb.go
src/pkg/gpuconfig/proto/: config.proto
src/pkg/modules/: module_params.go  module_params_test.go  modules.go  modules_test.go
src/pkg/nodeprofiler/cloudlogger/: cloudlogger.go  cloudlogger_test.go
src/pkg/nodeprofiler/profiler/: commands.go  commands_test.go  components.go  components_test.go  profiler.go
src/pkg/nodeprofiler/utils/: utils.go  (+3 more)
src/pkg/ovaconverter/: converter.go  ova_converter_config.go
src/pkg/preloader/: BUILD.bazel  README.md  gcs_test.go  preload.go  preload_test.go
src/pkg/provisioner/: BUILD.bazel  anthos_installer_install_script.go  config.go  disable_auto_update_step.go  disk_layout.go  gpu_setup_script.go  install_gpu_step.go  install_packages_step.go  provisioner.go  provisioner_test.go  run_script_step.go  seal_oem_step.go  state.go  systemd.go
src/pkg/tools/: BUILD.bazel  disable_systemd_service.go  extend_oem_partition.go  handle_disk_layout.go  handle_disk_layout_test.go  seal_oem_partition.go
src/pkg/tools/sbomutil/: BUILD.bazel  sbomutil.go  sbomutil_test.go
src/pkg/utils/: BUILD.bazel  changelogerror.go  changelogerror_test.go  gobutils.go  gobutils_test.go  qemu_converter.go  utils.go  utils_test.go
src/scripts/: enable_ibpb.sh
testing/: deprecate_test.yaml  disable_auto_update_test.yaml  env_test.yaml  extend_oem_test.yaml  gpu_test.yaml  gpu_test_deps_dir.yaml  image_test.yaml  install_packages_remote_pkgspec_test.yaml  install_packages_test.yaml  machine_type_test.yaml  milestone_test.yaml  multi_script_test.yaml  network_subnet_test.yaml  parallel_test.yaml  seal_oem_test.yaml  seal_oem_test_no_oem_size.yaml  seal_oem_test_no_size.yaml  seal_oem_test_timeout.yaml  smoke_test.yaml  timeout_test.yaml  toolbox_test.yaml  ubuntu_ova_test.yaml
testing/extend_oem_test/: extend_oem_test.yaml  preload_test.cfg
testing/gpu_test/: gpu_test.yaml
testing/install_packages_test/pkgspec/: preload-container.yaml
testing/machine_type_test/: preload.sh  preload_test.cfg
testing/multi_script/: preload_test.cfg
testing/network_subnet_test/: preload.sh  preload_test.cfg
testing/seal_oem_test/: seal_oem_test.yaml
testing/smoke_test/: preload_test.cfg
testing/timeout_test/: timeout_test.yaml
testing/toolbox_test/: preload.sh  preload_test.cfg
testing/util/: gpu_vm.wf.json  run_test.wf.json  vm.wf.json
(+97 files in other folders)
