# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the License);
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gce",
    srcs = [
        "gce.go",
        "delete_old_vm.go",
    ],
    importpath = "cos.googlesource.com/cos/tools.git/src/pkg/gce",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/config",
        "@org_golang_google_api//compute/v1:compute",
        "@org_golang_google_api//googleapi",
        "@org_golang_x_oauth2//google",
    ],
)

go_test(
    name = "gce_test",
    srcs = ["gce_test.go"],
    embed = [":gce"],
    deps = [
        "//src/pkg/config",
        "//src/pkg/fakes",
        "@org_golang_google_api//compute/v1:compute",
    ],
)

go_test(
    name = "delete_old_vm_test",
    srcs = ["delete_old_vm_test.go"],
    embed = [":gce"],
    deps = ["//src/pkg/fakes"]
)
