# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the License);
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sbomutil",
    srcs = ["sbomutil.go"],
    importpath = "cos.googlesource.com/cos/tools.git/src/pkg/tools/sbomutil",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/config",
        "//src/pkg/fs",
        "//src/pkg/gcs",
        "@com_github_spdx_tools_golang//spdx/v2/v2_2:go_default_library",
        "@com_github_spdx_tools_golang//spdx/v2/common:go_default_library",
        "@com_google_cloud_go_storage//:storage",
    ],
)

go_test(
    name = "sbomutil_test",
    srcs = ["sbomutil_test.go"],
    embed = [":sbomutil"],
    deps = [
        "//src/pkg/fakes",
        "@com_github_spdx_tools_golang//spdx/v2/v2_2:go_default_library",
        "@com_github_spdx_tools_golang//spdx/v2/common:go_default_library",
        "@com_github_google_go_cmp//cmp",
    ],
)
